[package]
name = "quic-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
s2n-quic = "1"
quinn = "0.10"
# current ver is 0.22, but quinn uses 0.21
rustls = "0.21"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
